<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:stretchColumns="0,1,2" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/versions"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/installedVersion" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/latestVersion" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_process" />

                <TextView
                    android:id="@+id/app_process_installed_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/none" />

                <TextView
                    android:id="@+id/app_process_latest_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/none" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xposedbridge" />

                <TextView
                    android:id="@+id/jar_installed_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/none" />

                <TextView
                    android:id="@+id/jar_latest_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/none" />
            </TableRow>
        </TableLayout>

        <TextView
            android:background="@drawable/text_button"
            android:id="@+id/framework_install_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp" />

        <TextView
            android:id="@+id/framework_install_errors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:textColor="@color/warning"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnInstall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/install" />

        <Button
            android:id="@+id/btnUninstall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uninstall" />

        <Button
            android:id="@+id/btnSoftReboot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/soft_reboot" />

        <Button
            android:id="@+id/btnReboot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reboot" />

    </LinearLayout>

</ScrollView>