<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:paddingBottom="4dip"
    android:paddingRight="?android:attr/scrollbarSize"
    android:paddingTop="4dip" >

    <TextView
        android:id="@android:id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="?android:attr/listPreferredItemPaddingLeft"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtFrameworkUpdateAvailable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@android:id/text1"
        android:layout_below="@android:id/text1"
        android:text="@string/welcome_framework_update_available"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/welcome_framework_update_available"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtUpdateAvailable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@android:id/text1"
        android:layout_below="@id/txtFrameworkUpdateAvailable"
        android:text="@string/welcome_update_available"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/welcome_update_available"
        android:visibility="gone" />

    <TextView
        android:id="@android:id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@android:id/text1"
        android:layout_below="@id/txtUpdateAvailable"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/txtXposedNotActive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@android:id/text1"
        android:layout_below="@android:id/text2"
        android:text="@string/xposed_not_active"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffff0000"
        android:visibility="gone" />

</RelativeLayout>